# dragonpy

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
.github/workflows/: python-app.yml
dragon/: __init__.py  __main__.py  ast.py  compiler.py  lexer.py  parser.py  token.py
dragon/tests/: test_program.py
dragon/tests/cases/stage1/invalid/: missing_paren.c  no_brace.c  no_semicolon.c  no_space.c  wrong_case.c
dragon/tests/cases/stage1/valid/: multi_digit.c  newlines.c  spaces.c
dragon/tests/cases/stage10/invalid/: fun_redefined_as_var.c  multiple_global_defs.c  non_constant_init.c  use_before_declaration.c  var_redefined_as_fun.c  variable_used_as_fun.c
dragon/tests/cases/stage10/valid/: forward_declaration.c  fun_shadowed_by_variable.c  global.c  global_not_initialized.c  global_shadowed.c  multiple_global.c
dragon/tests/cases/stage2/invalid/: missing_const.c  missing_semicolon.c  nested_missing_const.c  wrong_order.c
dragon/tests/cases/stage2/valid/: bitwise.c  bitwise_zero.c  neg.c  nested_ops.c  nested_ops_2.c  not_five.c  not_zero.c
dragon/tests/cases/stage3/invalid/: malformed_paren.c  missing_first_op.c  missing_second_op.c  no_semicolon.c
dragon/tests/cases/stage3/valid/: add.c  associativity.c  associativity_2.c  div.c  div_neg.c  mult.c  parens.c  precedence.c  sub.c  sub_neg.c  unop_add.c  unop_parens.c
dragon/tests/cases/stage4/invalid/: missing_first_op.c  missing_mid_op.c  missing_second_op.c  missing_semicolon.c
dragon/tests/cases/stage4/valid/: and_true.c  eq_false.c  eq_true.c  ge_false.c  ge_true.c  gt_false.c  gt_true.c  le_false.c  le_true.c  (+13 more)
dragonpy/: __init__.py  __main__.py  ast.py  gen.py  lexer.py  parser.py  token.py
dragonpy/tests/: test_program.py
(+147 files in other folders)
