[tool.poetry]
name = "dragonpy"
version = "0.1.0"
description = ""
authors = ["Kyle Coffey <me@phytolizer.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.1.2"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
