[tool.poetry]
name = "dragon"
version = "0.1.0"
description = "A C compiler in Python"
authors = ["Kyle Coffey <me@phytolizer.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pydantic = "^1.10.1"
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
