[tool.pdm]
[tool.pdm.build]
includes = []

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.8.0",
    "isort>=5.10.1",
    "flake8>=5.0.4",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.isort]
profile = "black"

[project]
name = "dragon"
version = "0.1.0"
description = "A C compiler in Python"
authors = [
    {name = "Kyle Coffey", email = "me@phytolizer.dev"},
    {name = "Kyle Coffey",email = "me@phytolizer.dev"},
]
dependencies = [
    "click<9.0.0,>=8.1.3",
    "pytest<8.0.0,>=7.1.3",
    "rich<13.0.0,>=12.5.1",
    "pydantic>=1.10.2",
]
requires-python = ">=3.10,<4.0"
license = {text = "MIT"}

[project.urls]

[project.optional-dependencies]
